--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -236,14 +236,20 @@ azure_functions:
   allow_failure: true
   needs:
     - azure_create_resource_group_datatable_appserviceplan_webapp
+  image: inf-docker.fh-rosenheim.de/inf-ca/sose2024/iecag/azure-cli
   script:
     - echo "Setup healthcheck function"
-    - apk add --update nodejs npm dotnet-sdk
+    - apk add --update nodejs npm  # Install Node.js and npm (apk is for Alpine Linux)
     - npm install -g azure-functions-core-tools@4
+    - wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh
+    - chmod +x dotnet-install.sh
+    - ./dotnet-install.sh -c 8.0 --install-dir /usr/share/dotnet
+    - ln -s /usr/share/dotnet/dotnet /usr/bin/dotnet
     - az functionapp create --resource-group $RESOURCE_GROUP --consumption-plan-location $AZURE_LOCATION --runtime dotnet --functions-version 4 --name $AZURE_HEALTHCHECKFUNCTION_APP_NAME --storage-account $STORAGE_ACCOUNT || exit 0
     - az functionapp config appsettings set --name $AZURE_HEALTHCHECKFUNCTION_APP_NAME --resource-group $RESOURCE_GROUP --settings RESOURCE_ENDPOINTS="$WEBAPP_NAME.azurewebsites.net;$WRAPPER_CONTAINER_NAME.azurewebsites.net;$STORAGE_ACCOUNT.blob.core.windows.net"
     - cd code/HealthCheck/HealthCheckFunction/HealthCheckFunction/
     - func azure functionapp publish $AZURE_HEALTHCHECKFUNCTION_APP_NAME --dotnet-isolated || exit 0
+
 
 #build_api_wrapper:
 #  stage: azure_setup
